blockml/test/errors/11_report/e266/e266m.model
model: e266m
joins:
- from_view: e266_one
  as: a
